Horizontal scroll bar issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ main {
 /*** main table ***/
 
 table .ms-big-col {
-    width: 50%;
+    width: 46%;
 }
 
 .ms-avatar {
